# System-Design-Expert-LLM

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: dpo.yaml  sft.yaml
data/seed_corpus/: _TEMPLATE.md  api-design.md  api-gateway.md  backpressure.md  bloom-filters.md  caching.md  cap-pacelc.md  capacity-estimation.md  cdn.md  circuit-breaker-resilience.md  consensus-raft-paxos.md  consistency-models.md  data-partitioning.md  database-federation-denormalization.md  database-indexing.md  distributed-locking.md  distributed-model-training.md  distributed-transactions.md  event-driven-architecture.md  gossip-protocol.md  gpu-cluster-scheduling.md  heartbeats-failure-detection.md  idempotency.md  large-file-storage-chunking.md  leader-election.md  llm-inference-serving.md  load-balancing.md  message-queues.md  microservices-vs-monolith.md  ml-platform-and-mlops.md  model-quantization-compression.md  multi-region-active-active.md  newsfeed-fanout.md  notification-systems.md  object-storage.md  observability.md  payment-processing.md  proximity-geohashing.md  rate-limiting.md  replication.md  (+8 more)
data/sources/: paper_list.json
eval/: _bootstrap.py  _smoke_offline.py  generate.py  judge.py  make_prompts.py  report.py
notebooks/: README.md  kaggle_dpo.ipynb  kaggle_sft.ipynb
scripts/: _bootstrap.py  _debug_one.py  _monitor_pipeline.ps1  _smoke_offline.py  build_dpo.py  gen_answers.py  gen_scenarios.py  ingest_gh_repo.py  ingest_hf_dataset.py  ingest_papers.py  ingest_sources.py  prepare_kaggle_dataset.py  quality_filter.py  run_pipeline.py
src/sdx/: llm.py  (+4 more)
(+1 files in other folders)
