[project]
name = "system-design-expert-llm"
version = "0.1.0"
description = "Fine-tune an open 7-8B LLM into a best-in-class architecture advisor for real systems."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.45.0",
    "python-dotenv>=1.2.2",
    "pydantic>=2.9.0",
    "tenacity>=9.0.0",
    "fastembed>=0.8.0",
    "numpy>=2.0.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.2",
]

# NOTE: Training deps (unsloth, trl, peft, transformers, bitsandbytes, torch) are NOT
# listed here on purpose. They are installed inside the Kaggle notebook environment,
# which pins CUDA-specific wheels. This local package only handles data collection,
# quality filtering, and evaluation orchestration.

[project.optional-dependencies]
dev = ["ruff>=0.6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdx"]

[tool.ruff]
line-length = 100
target-version = "py312"
